# Python_Stack

./: pyproject.toml
_python/OOP/: TDD.py  bankAccount.py  chaining.py  parent.py  products.py  singlyLinkedLists.py  store.py  store_and_products.py  user.py  user2.py
_python/python_fundamentals/: for_loop_basic1.py  for_loop_basic_2.py  function_basic_1.py  function_basic_2.py  functions_intermediate_1.py  functions_intermediate_2.py  insertion_sort.py  python_loops_predict.txt  selection_sort.py
django/django_intro/dojo_survey/: db.sqlite3
django/django_intro/dojo_survey/dojo_survey/: settings.py  urls.py
django/django_intro/dojo_survey/random_word/: urls.py  views.py
django/django_intro/dojo_survey/survey_app/: urls.py  views.py
django/django_intro/dojos_/: db.sqlite3  manage.py
django/django_intro/dojos_/dojos_/: settings.py  urls.py  wsgi.py
django/django_intro/dojos_/dojos_ninjas_app/: models.py  save_shell.txt  urls.py
django/django_intro/first_project/appone/: views.py
django/django_intro/first_project/first_project/: urls.py  (+1 more)
django/django_intro/ninja_gold/: db.sqlite3
django/django_intro/single_model_orm/: db.sqlite3
django/django_orm/books_authors_proj/: db.sqlite3  shell_queries.txt
django/django_orm/login_reg_proj/: db.sqlite3
django/django_orm/tv_shows_proj/: db.sqlite3
exam_python/trip_buddy_2_proj/: db.sqlite3  manage.py
exam_python/trip_buddy_2_proj/trip_buddy_2_app/: apps.py  models.py  urls.py  views.py
exam_python/trip_buddy_2_proj/trip_buddy_2_proj/: settings.py  urls.py  wsgi.py
my_environments/py3Env/: pyvenv.cfg
(+50 files in other folders)
